--- a/FileBroker.Web/Pages/Index.cshtml
+++ b/FileBroker.Web/Pages/Index.cshtml
@@ -34,6 +34,7 @@
                 <a href="~/Tools/TestOps" class="btn btn-action btn-block disabled">Test Ops</a>
                 <a href="~/Tools/RestartFileMonitor" class="btn btn-action btn-block disabled">Restart File Monitor</a>
                 <a href="~/Tools/TestFoaeaLogin" class="btn btn-action btn-block">Test FOAEA login</a>
+                <a href="~/Tools/VerifyTraceResponses" class="btn btn-action btn-block">Verify Trace Responses</a>
             </div>
         </div>
     </div>
